docs: updated swagger documentation
