# app/Http/Controllers/Api/Auth/AuthController.php
@@ -18,20 +18,71 @@ class AuthController extends Controller
     ) {
     }
 
+    /**
+     *  @OA\Post(
+     *     path="/api/login",
+     *     tags={"Auth"},
+     *     summary="Login endpoint to get token and allow to create posts and comments",
+     *
+     *      @OA\RequestBody(
+     *      required=true,
+     *      description="Provide All Info Below",
+     *
+     *      @OA\JsonContent(
+     *          required={"email","password"},
+     *
+     *          @OA\Property(property="email", type="string", format="text", example="email@test.com"),
+     *          @OA\Property(property="password", type="string", format="text", example="12345678"),
+     *          ),
+     *      ),
+     *
+     *      @OA\Response(
+     *          response=200,
+     *          description="User login successfully",
+     *
+     *          @OA\JsonContent(
+     *
+     *              @OA\Property(property="message", type="string", example="User Logged in successfully"),
+     *              @OA\Property(property="token", type="string", example="QrCcHEPyOy66h7ibLWaZZ7I")
+     *        )
+     *     ),
+     *
+     *   @OA\Response(
+     *    response=422,
+     *    description="Bad request",
+     *
+     *    @OA\JsonContent(
+     *
+     *       @OA\Property(property="code", type="number", example=422),
+     *       @OA\Property(property="message", type="object", example="{email:[required]}")
+     *        )
+     *     ),
+     *
+     *   @OA\Response(
+     *    response=401,
+     *    description="Required authentication",
+     *
+     *    @OA\JsonContent(
+     *
+     *       @OA\Property(property="code", type="number", example=401),
+     *       @OA\Property(property="message", type="object", example="Unauthorized")
+     *        )
+     *      )
+     *    )
+     * )
+     */
     public function login(LoginRequest $request): JsonResponse
     {
         $payloadData = $request->validated();
         if (!Auth::attempt($payloadData)) {
             return response()->json([
-                'status' => false,
-                'errors' => ['Unauthorized'],
+                'messagge' => 'Unauthorized',
             ], 401);
         }
 
         $user = $this->userRepository->getUserByEmal($payloadData['email']);
 
         return response()->json([
-            'status' => true,
             'messagge' => 'User Logged in successfully',
             'token' => $user->createToken('API_TOKEN')->plainTextToken,
         ], 200);
@@ -42,7 +93,6 @@ class AuthController extends Controller
         auth()->user()->tokens()->delete();
 
         return response()->json([
-            'status' => true,
             'messagge' => 'User Logged out successfully',
         ], 200);
     }
